// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should render and match snapshot when open 1`] = `
HTMLCollection [
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 256px;
  background-color: #212933;
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  -webkit-transition: transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
  position: absolute;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  z-index: 800;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

@media (min-width:960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

@media (min-width:960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

<nav
    class="circuit-0 circuit-1"
    open=""
  />,
  .circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #212933;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
  visibility: visible;
  opacity: 0.56;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
    class="circuit-0 circuit-1"
    data-testid="sidebar-backdrop"
  />,
  .circuit-0 {
  cursor: pointer;
  outline: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
  visibility: visible;
  opacity: 1;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
    class="circuit-0 circuit-1"
    data-testid="sidebar-close-button"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 5l14 14m0-14L5 19"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </button>,
]
`;

exports[`<Sidebar /> should render and match the snapshot when closed 1`] = `
HTMLCollection [
  .circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  min-width: 256px;
  background-color: #212933;
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  -webkit-transition: transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
  position: absolute;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  z-index: 800;
}

@media (min-width:960px) {
  .circuit-0 {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    position: relative;
  }
}

<nav
    class="circuit-0 circuit-1"
  />,
  .circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #212933;
  -webkit-transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,visibility 200ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
    class="circuit-0 circuit-1"
    data-testid="sidebar-backdrop"
  />,
  .circuit-0 {
  cursor: pointer;
  outline: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
    class="circuit-0 circuit-1"
    data-testid="sidebar-close-button"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 5l14 14m0-14L5 19"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </button>,
]
`;
